# stitchlab-agentcore

./: .gitignore  INTEGRATION.md  config.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  test.py  test_call_tool.py  test_list_tools.py  test_mcp_tools.py
agent/: __init__.py  builder.py  config.py
agent/tools/: calculator.py
mcp_app/: README.md  TESTING.md  __init__.py  app.py
runtime/: __init__.py  app.py  factory.py
utils/: config.py
